# oauth-account-backend

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  private_key.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240320_092624_create_user_table.rs
src/: init.rs  main.rs
src/crypto/: bitcoin_keypair.rs  ethereum_keypair.rs  mod.rs  neo_keypair.rs  secret_key.rs
src/routes/: github_handler.rs  google_handler.rs  handler.rs  home_routes.rs  mod.rs
src/routes/handlers/: home_handler.rs
src/utils/: api_response.rs  app_state.rs  auth.rs  constants.rs  err_message.rs  mod.rs
