[package]
name = "rust_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = "4.5.1"
serde = "1.0.197"
serde_json = "1.0.1"
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }